--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="0dp">
+    android:padding="16dp">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieAnimationView"
@@ -14,11 +14,22 @@
         app:lottie_autoPlay="true"
         app:lottie_loop="true" />
 
+    <!-- Prvi taster smešten iznad dna RelativeLayout-a -->
+    <Button
+        android:id="@+id/btnOpenLettersActivity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Nauči slova"
+        android:layout_marginBottom="60dp" />
+
+    <!-- Drugi taster smešten iznad prvog tastera -->
     <Button
         android:id="@+id/btnStartGovorActivity"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@id/btnOpenLettersActivity"
         android:text="Pokreni Govor"
-        android:layout_centerInParent="true"/>
+        android:layout_marginBottom="16dp"/>
 
 </RelativeLayout>
