Dodate nove animacije i zvukovi, modifikovani layout i aktivnosti

--- a/app/src/main/res/layout/activity_govor.xml
+++ b/app/src/main/res/layout/activity_govor.xml
@@ -9,36 +9,23 @@
         android:id="@+id/lottieBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         app:lottie_url="https://lottie.host/553df60d-4abe-47cb-a1ec-cc599f4d37bc/ZY7BGFrDSm.lottie"
         app:lottie_autoPlay="true"
         app:lottie_loop="true" />
 
-    <TextView
-        android:id="@+id/imageExplanation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="ДРВО"
-        android:textSize="24sp"
-        android:textColor="#FFFF00"
-        android:layout_marginTop="16dp"/>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="550dp"
+        android:layout_alignParentTop="true"/>
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottieTree"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
-        android:layout_below="@id/imageExplanation"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_fileName="drvo.lottie" />
 
     <LinearLayout
         android:id="@+id/buttonsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/lottieTree"
+        android:layout_below="@id/viewPager"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
         android:layout_marginTop="10dp">
